createIndex crashes when implicitly creating a collection if the _id index is explicitly specified

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Storage Execution
    • Fully Compatible
    • ALL
    • Storage Execution 2025-07-21
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      runCreateIndexesOnNewCollection passes the unfiltered ident array to IndexBuildsCoordinator::createIndexesOnEmptyCollection(), which hits an invariant failure if any idents were filtered out. This can only happen if the _id index was explicitly created.

            Assignee:
            Thomas Goyne
            Reporter:
            Thomas Goyne
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: