SERVER-107503 Fix invariant failure when createIndexes() explicitly creates the _id index (#38492)

GitOrigin-RevId: 320233c4f305750a08d9ada347ea3a21800088aa